# token.place

./: .bandit  .coveragerc  .dockerignore  .eslintrc.json  .gitattributes  .gitignore  .pre-commit-config.yaml  .spellcheck.yaml  .typos.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CROSS_PLATFORM.md  Dockerfile  Dockerfile.relay  LICENSE  Makefile  README.md  STREAMING_IMPLEMENTATION_GUIDE.md  TESTING.md  bandit.yaml  client.py  client_simplified.py  codecov.yml  config.py  docker-compose.yml  encrypt.py  eslint.config.js  eslint.config.mjs  llama_cpp.py  llms.txt  mypy.ini  nginx.conf  package-lock.json  package.json  pytest.ini  relay.py  release_metadata.py  (+16 more)
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
api/: __init__.py  security.py
clients/: index.ts  package.json  token_place_client.ts
config/: requirements_codex_verification.txt  requirements_relay.txt  requirements_server.txt  server_providers.yaml
desktop/: .eslintrc.json  README.md  electron-builder.json  package-lock.json  package.json  tsconfig.json
desktop-tauri/: .gitignore  README.md  fake_sidecar.py  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop-tauri/src-tauri/capabilities/: default.json
desktop-tauri/src-tauri/icons/: README.md  icon.icns
desktop-tauri/src-tauri/python/: EMBEDDED_RUNTIME.md  compute_node_bridge.py  context_profiles.py  desktop_gpu_packaging.py  desktop_runtime_setup.py  embedded_python_runtime_manifest.json  embedded_python_runtime_manifest_windows_x86_64.json  embedded_python_runtime_windows_manifest.json  embedded_python_runtime_windows_x86_64_manifest.json  inference_bridge.py  inference_sidecar.py  model_bridge.py  path_bootstrap.py  requests.py  requirements_desktop_runtime.txt  runtime_verify.py  verify_desktop_runtime.py  verify_llama_runtime.py
desktop-tauri/src-tauri/python-runtime/: .gitkeep
desktop-tauri/src-tauri/python/licenses/: PYTHON_BUILD_STANDALONE_NOTICE.txt  PYTHON_BUILD_STANDALONE_NOTICES.txt  PYTHON_LICENSE.txt
desktop-tauri/src-tauri/src/: backend.rs  build_identity.rs  compute_node.rs  config.rs  context_profiles.rs  debug_logs.rs  desktop_runtime_bootstrap.rs  forward.rs  keygen.rs  lib.rs  logging.rs  main.rs  model_bridge.rs  operator_logs.rs  python_runtime.rs  relay.rs  sidecar.rs  subprocess_log.rs  subprocess_logging.rs
desktop-tauri/src-tauri/tests/: sidecar_adapter.rs
dict/: allow.txt
docker/: Dockerfile.api  (+3 more)
(+665 files in other folders)
