[package]
name = "token-place-desktop-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
base64 = "0.22"
rand = "0.8"
rsa = { version = "0.9", features = ["pem"] }
sha2 = "0.10"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["process", "io-util", "sync", "time", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3"
